packages/odyssey-react/src/components/Modal/Modal.module.scss
/*!
 * Copyright (c) 2018-present, Okta, Inc. and/or its affiliates. All rights reserved.
 * The Okta software accompanied by this notice is provided pursuant to the Apache License, Version 2.0 (the "License.")
 *
 * You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0.
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *
 * See the License for the specific language governing permissions and limitations under the License.
 */

.root {
  display: none;

  &.openState {
    display: block;
  }
}

.overlay {
  display: flex;
  position: fixed;
  z-index: 10;
  inset-block-start: 0;
  inset-inline-end: 0;
  inset-block-end: 0;
  inset-inline-start: 0;
  align-items: center;
  justify-content: center;
  background-color: var(--OverlayBackgroundColor);

  .root[aria-hidden="false"] & {
    animation-name: overlayIn;
    animation-duration: var(--AnimationDuration);
    animation-timing-function: var(--AnimationTimingFunction);
  }

  .root[aria-hidden="true"] & {
    animation-name: overlayOut;
    animation-duration: var(--AnimationDuration);
    animation-timing-function: var(--AnimationTimingFunction);
  }
}

.dialog {
  @include border-radius($base-border-radius);

  position: relative;
  max-width: calc(#{$max-line-length} + #{$spacing-m} + #{$spacing-m});
  max-height: calc(100vh - #{$spacing-m});
  padding-block-start: var(--DialogPaddingBlockStart);
  padding-block-end: var(--DialogPaddingBlockEnd);
  padding-inline: var(--DialogPaddingInline);
  overflow-y: auto;
  background-color: var(--DialogBackgroundColor);

  .root[aria-hidden="false"] & {
    animation-name: dialogIn;
    animation-duration: var(--AnimationDuration);
    animation-timing-function: var(--AnimationTimingFunction);
  }

  .root[aria-hidden="true"] & {
    animation-name: dialogOut;
    animation-duration: var(--AnimationDuration);
    animation-timing-function: var(--AnimationTimingFunction);
  }
}

.header {
  display: flex;
  flex-direction: row-reverse;
  align-items: center;
  padding-block-end: var(--HeaderPaddingBlockEnd);
}

.heading {
  flex: 1;
}

.dismiss {
  align-self: flex-end;
  margin-block-end: var(--DismissMarginBlockEnd);
}

.content {
  padding-block-start: var(--ContentPaddingBlockStart);
  padding-block-end: var(--ContentPaddingBlockEnd);
  padding-inline: var(--ContentPaddingInline);
  font-size: var(--ContentFontSize);
}

.footer {
  display: flex;
  justify-content: flex-end;
  padding-block-start: var(--FooterPaddingBlockStart);
  padding-block-end: var(--FooterPaddingBlockEnd);
}

@keyframes overlayIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes overlayOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
  }
}

@keyframes dialogIn {
  from {
    transform: scale(0.7);
    opacity: 0;
  }

  to {
    transform: scale(1);
    opacity: 1;
  }
}

@keyframes dialogOut {
  from {
    transform: scale(1);
    opacity: 1;
  }

  to {
    transform: scale(0.7);
    opacity: 0;
  }
}

